<?xml version="1.0"?>
<package format="3">
  <name>arm_five</name>
  <version>1.0.0</version>
  <description>
    URDF description package for the arm_five robot.
    Contains configuration data, 3D models, and launch files
    for visualization and simulation in Gazebo and RViz2.
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- ========== 构建工具依赖 ========== -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ========== 运行时依赖（ROS 2 包） ========== -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- ========== 其他导出信息 ========== -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
