<?xml version="1.0"?>
<package format="3">
  <name>ur3</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for ur3.
    This package contains configuration data, 3D models, and launch files
    for the ur3 robot.
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <author>TODO</author>
  <license>BSD</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

